2004-04-12  Eric Blake  <ebb9@byu.net>

	* src/error.h (STATIC_TYPE_ACCESSING_MEMBER_TYPE): New error.
	* src/error.cpp: Ditto.
	* src/decl.cpp (FindType): Emit it when appropriate.

2004-04-11  Eric Blake  <ebb9@byu.net>

	* src/symbol.cpp (UnlinkFromParents): Fix compile-time error with
	poor choice of identifier.

2004-04-11  Elliott Hughes  <enh@acm.org>

	* AUTHORS: Credit where credit's due.

2004-04-11  Elliott Hughes  <enh@acm.org>

	* src/diagnose.cpp: Remove an extraneous endl that caused blank
	lines to appear in +E or +D output when there were syntax (rather
	than lexical or semantic) errors. There are still some cases where
	Jikes outputs extra blank lines in its regular output, but they're
	less noticeable when the output isn't very tight anyway, and I haven't
	found them in the source, either.

2004-04-11  Phil Norman  <cuvy.abezna@virgin.net>

	* src/symbol.h, src/symbol.cpp: Fix bug 3446. Added a method
	TypeSymbol::UnlinkFromParents which removes references from the
	subtypes and dependents sets of the TypeSymbol's 'super' and set
	of implemented interfaces. Used this method in the method
	SymbolTable::DeleteAnonymousTypes so that destroyed anonymous
	types will be properly unlinked. Bug 3446 was caused by things such
	as the TypeSymbol representing java.lang.Object keeping references
	to a destroyed TypeSymbol, and so causing segfaults.

2004-04-08  Eric Blake  <ebb9@byu.net>

	* src/class.cpp (Init) [!JIKES_DEBUG]: Fix regression in non-debug
	builds from previous patch.

2004-04-07  Eric Blake  <ebb9@byu.net>

	* src/depend.cpp (AddDependence): Move array, primitive processing
	here from elsewhere. Once again allows int[].class in a package.
	* src/expr.cpp (ProcessAmbiguousName, ProcessFieldAccess),
	(ProcessMethodName, GetAnonymousType): Use updates to
	AddDependence.

2004-04-04  Eric Blake  <ebb9@byu.net>

	* src/class.cpp (Init): Silence compiler warning.

2004-04-04  Musachy Barroso <insanus@bellsouth.net>

	Jikes patch 432.